# noema

./: .gitignore  README.md  pyproject.toml
demo/: README.md  export.py  model.mjs  noema.html  parity.mjs
noema/: __init__.py  utils.py
noema/data/: dataset.py  nlb.py  pretrain.py  synthetic.py
noema/eval/: baselines.py  calibration.py  ensemble.py  ensemble_run.py  falcon.py  falcon_run.py  falcon_transfer.py  falcon_worldmodel.py  metrics.py  mint.py  nlb.py  score_test.py  sim2real.py  streaming.py  submission.py
noema/models/: adversary.py  coupling.py  encoder.py  heads.py  noema.py  ssm.py  tokenizer.py  world_model.py
noema/sim/: __init__.py  rollout.py
noema/train/: __init__.py  adapt.py  run.py  trainer.py
scripts/: farmshare_conda.sh  farmshare_ensemble.sbatch  farmshare_nlb.sbatch  farmshare_pretrain.sbatch  farmshare_submission.sbatch  nlb.sh  nlb_submission.md  pretrain.sh
tests/: test_baselines.py  test_calibration.py  test_cross.py  test_demo_parity.py  test_ensemble.py  test_eval.py  test_falcon.py  test_metrics.py  test_mint.py  test_model.py  test_pretrain.py  test_sensory.py  test_sim.py  test_sim2real.py  test_spatial.py  test_streaming.py  test_train.py  test_transfer.py
